[package]
name = "RustGLM"
version = "0.1.4"
edition = "2021"
authors = ["blueokanna <blueokanna@gmail.com>"]
repository = "https://github.com/blueokanna/RustGLM.git"
license = "Apache-2.0"
description = "High-performance, Reliable Zhipu ChatGLM SDK natural language processing in Rust Language"
homepage = "https://github.com/blueokanna/RustGLM"
readme = "README.md"
keywords = ["zhipu","chatglm","http","ai","sdk"]

[badges]
maintenance = { status = "actively-developed" }

[depende